--- a/css/components/friends.css
+++ b/css/components/friends.css
@@ -23,3 +23,24 @@
   padding-top: 10px;
   color: rgba(0, 0, 0, 0.3);
 }
+.real-kakao {
+  background-color: var(--yellow);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 110px;
+  animation: kakao 0.3s ease-in-out 1s forwards;
+}
+@keyframes kakao {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
