--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,4 +1,4 @@
-.nav {
+-.nav {
   background-color: #f9f9f9;
   padding: 20px 50px;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
@@ -28,6 +28,7 @@
   font-weight: 600;
   left: 19px;
   bottom: 16px;
+  animation: notification 2s ease-in-out infinite;
 }
 .nav__point {
   display: flex;
@@ -36,4 +37,41 @@
   font-size: 50px;
   bottom: 23px;
   left: 30px;
+}
+@keyframes notification {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+
+  100% {
+    transform: none;
+  }
+}
+@keyframes BBB {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: translateY(-10px);
+    opacity: 1;
+  }
+}
+.nav__btn {
+  transform: rotate(100deg);
+  animation: BBB 0.5s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+  opacity: 0;
+  animation-delay: 1s;
+}
+.nav__btn:nth-child(3) {
+  opacity: 0;
+  animation-delay: 1.5s;
+}
+.nav__btn:last-child {
+  opacity: 0;
+  animation-delay: 2s;
 }
